# SmartSquareRL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MapHelper.md  README.md  Todo.md  cmake_install.cmake  createProtoFiles.sh  gRPC.cmake  kill_servers.sh  set_up_x11.sh  start_learning.sh  start_servers.sh  start_workers.sh
Game/: Board.cpp  Board.h  Game.cpp  Game.hpp  Level.cpp  Level.hpp  PipeCommunication.cpp  PipeCommunication.h  PipeTest.py  Square.cpp  Square.h  main.cpp
Game/GameFiles/: Game.cpp  Game.hpp  GameStateHandling.cpp  GameStateHandling.hpp  Level.cpp  Level.hpp  main.cpp
Game/GameFiles/GameObjects/: Box.cpp  Box.hpp  Bullet.cpp  Bullet.hpp  CircleObject.cpp  CircleObject.hpp  Coin.cpp  Coin.hpp  Finish.cpp  Finish.hpp  Floor.cpp  Floor.hpp  MovingDanger.cpp  MovingDanger.hpp  Player.cpp  Player.hpp  PlayerFoV.cpp  PlayerFoV.hpp  SquareObject.cpp  SquareObject.hpp  StaticDanger.cpp  StaticDanger.hpp  Wall.cpp  Wall.hpp
Game/GameFiles/Maps/: CheckMapDuplicates.py  ConvertMap.py  Readme.md  map0.txt  map1.txt  map2.txt  map3.txt  map4.txt  map5.txt  map6.txt
Game/GameObjects/: Box.cpp  Box.h  Box.hpp  Bullet.cpp  Bullet.h  Bullet.hpp  CircleObject.cpp  CircleObject.hpp  Coin.cpp  Coin.h  Coin.hpp  Finish.cpp  Finish.hpp  GameObject.cpp  GameObject.h  MovingDanger.cpp  MovingDanger.hpp  MovingEnemy.cpp  MovingEnemy.h  Player.cpp  Player.h  Player.hpp  SquareObject.cpp  SquareObject.hpp  StaticDanger.cpp  StaticDanger.hpp  StaticEnemy.cpp  StaticEnemy.h  Wall.cpp  Wall.hpp
Game/Maps/: ConvertMap.py  test_map.txt
Game/ProtoClient/: ProtoClient.cpp  ProtoClient.hpp  testProtoClient.cpp
Game/ProtoClient/ProtoFiles/: game.grpc.pb.cc  game.grpc.pb.h  game.pb.cc  game.pb.h  game.proto  test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h  test.proto
Game/ProtoFiles/: test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h  test.proto
RL/: requirements.txt
RL/AI/: A_Star.py  DDQN.py  DQN.py  DifferentAlgorithmsTest.py  GameDataHandling.py  Learner.md  ProtoServer.py  ProtoServer.py.pclprof  TestNeuralNetwork.py  model.py
RL/AI/ProtoFiles/: game.proto  game_pb2.py  game_pb2_grpc.py
RL/LearningData/: Calculations.py  GenerateModel.py  PlotHelper.py  calculateWinByWorker.sh  learning_params.json  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs  reward_worker_6.logs
RL/LearningData/10_CNN_Generalization_1/: learning_params.json  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs
RL/LearningData/10_Gen_7x7Map1/: PlotHelper.py  Statistics.txt  learning_params.json  maps.txt  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs  reward_worker_5.logs  reward_worker_6.logs  reward_worker_7.logs  reward_worker_8.logs  reward_worker_9.logs
RL/LearningData/11_Gen_7x7Map2/: PlotHelper.py  Statistics.txt  learning_params.json  maps.txt  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs  reward_worker_5.logs  reward_worker_6.logs  reward_worker_7.logs  reward_worker_8.logs  reward_worker_9.logs
RL/LearningData/11_Generalization_3/: learning_params.json
RL/LearningData/12_Gen_7x7Map3/: PlotHelper.py  Result.txt  Statistics.txt  learning_params.json  maps.txt  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_5.logs
RL/LearningData/13_Gen_7x7Map4/: PlotHelper.py  Result.txt  Statistics.txt  learning_params.json  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs  reward_worker_5.logs  reward_worker_6.logs
RL/LearningData/14_Gen_7x7Map5/: PlotHelper.py  Result.txt  Statistics.txt  learning_params.json  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs
RL/LearningData/15_Gen_13x13Map1/: PlotHelper.py  Statistics.txt  learning_params.json  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs  reward_worker_5.logs  reward_worker_6.logs
RL/LearningData/16_Gen_13x13Map2/: PlotHelper.py  Statistics.txt  learning_params.json  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs
RL/LearningData/17_Gen_13x13Map3_CNN/: PlotHelper.py  Result.txt  Statistics.txt  learning_params.json  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs
RL/LearningData/18_Gen13x13Map4_VariousCNNModels/: PlotHelper.py  Result.txt
RL/LearningData/18_Gen_13x13Map4_VariousCNNModels/: PlotHelper.py  Result.txt  Statistics.txt  WinsPlot.py  learning_params.json  reward_worker_4.logs  reward_worker_5.logs  reward_worker_6.logs
RL/LearningData/19_Gen_20x20Map1_CNN/: Result.txt  learning_params.json  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs  reward_worker_5.logs  reward_worker_6.logs  reward_worker_7.logs
RL/LearningData/1_Learning_Rate_choosing/: PlotHelper.py  Statistics.txt  learning_params.json  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs  reward_worker_5.logs
RL/LearningData/20_Model_Comparison_To_AStar/: 13x13Logs_AStar.txt  13x13Logs_RL.txt  20x20Logs_AStar.txt  20x20Logs_RL.txt  7x7Logs_AStar.txt  7x7Logs_RL.txt  GetPlot.py
RL/LearningData/2_Gamma_choosing/: PlotHelper.py  Statistics.txt  learning_params.json  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs  reward_worker_5.logs
RL/LearningData/3_Iteration_per_episode_choosing/: PlotHelper.py  Statistics.txt  reward_worker_0.logs  reward_worker_1.logs  reward_worker_2.logs  reward_worker_3.logs  reward_worker_4.logs  reward_worker_5.logs
RL/ProtoFiles/: ProtoServer.py  game.proto  game_pb2.py  game_pb2_grpc.py  testPython.proto  testPython_pb2.py  testPython_pb2_grpc.py
RL/ProtoServer/ProtoFiles/: ProtoServer.py  (+3 more)
(+1194 files in other folders)
